# Time_Series_Prj

./: .gitignore  README.md  main.py  pyproject.toml
.agents/rules/: python_development.md
notebooks/: Q1_Student_MDP.ipynb  Q2_Grid_World.ipynb  Q3_Jacks_Car_Rental.ipynb  Q4_Contraction_Mapping.ipynb
slides/: slides.tex
src/q1_student_mdp/: explanation.md  mdp.py
src/q2_grid_world/: explanation.md  grid_world.py
src/q3_jacks_car/: explanation.md  jacks_car.py
src/q4_contraction/: demo.py  proof.md
tests/: test_q1.py  test_q2.py  test_q3.py  test_q4.py
